--- a/src/poc_search_module.ipynb
+++ b/src/poc_search_module.ipynb
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -422,8 +422,7 @@
     ") -> AIMessage:\n",
     "    llm = ChatOpenAI(model=\"gpt-4o-mini\", temperature=0)\n",
     "    unified_markdown = results_to_markdown(search_results)\n",
-    "\n",
-    "    logger.info(f\"summarize: input {len(unified_markdown):,} characters, {llm.get_num_tokens(unified_markdown):,} tokens, {len(search_results)} search results\")\n",
+    "    input_len = len(unified_markdown)\n",
     "\n",
     "    if shorten_urls:\n",
     "        url_shortener = URLShortener()\n",
@@ -434,12 +433,10 @@
     "    result = runnable.invoke({\"text\": unified_markdown, \"company_name\": target.company, \"product_name\": target.product})\n",
     "    result.content = result.content.strip().strip(\"```markdown\").strip(\"```\")\n",
     "\n",
-    "        # print(f\"summarize: output {len(result.content):,} characters, {llm.get_num_tokens(result.content):,} tokens\")\n",
-    "    logger.info(f\"output {len(result.content):,} characters, {llm.get_num_tokens(result.content):,} tokens\")\n",
-    "\n",
     "    if shorten_urls:\n",
     "        result.content = url_shortener.unshorten_markdown(result.content)\n",
     "\n",
+    "    logger.info(f\"{input_len:,} -> {len(result.content):,} chars ({len(result.content) / input_len:.0%})\")\n",
     "\n",
     "    return result\n",
     "\n",
@@ -456,35 +453,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m2024-08-18 14:17:05.997\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mcore\u001b[0m:\u001b[36mshorten_markdown\u001b[0m:\u001b[36m146\u001b[0m - \u001b[1m19,034 -> 15,270 chars (80% of original)\u001b[0m\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "summarize: input 19,034 characters, 4,852 tokens, 67 search results\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32m2024-08-18 14:17:17.266\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mcore\u001b[0m:\u001b[36munshorten_markdown\u001b[0m:\u001b[36m159\u001b[0m - \u001b[1m3,809 -> 5,900 chars (155% of original)\u001b[0m\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "summarize: output 3,809 characters, 1,159 tokens\n"
+      "\u001b[32m2024-08-18 14:23:14.457\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mcore\u001b[0m:\u001b[36mshorten_markdown\u001b[0m:\u001b[36m146\u001b[0m - \u001b[1m19,034 -> 15,270 chars (80% of original)\u001b[0m\n",
+      "\u001b[32m2024-08-18 14:23:14.463\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36mcore\u001b[0m:\u001b[36munshorten_markdown\u001b[0m:\u001b[36m159\u001b[0m - \u001b[1m3,809 -> 5,900 chars (155% of original)\u001b[0m\n",
+      "\u001b[32m2024-08-18 14:23:14.464\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36msummarize\u001b[0m:\u001b[36m70\u001b[0m - \u001b[1m19,034 -> 5,900 chars (31%)\u001b[0m\n"
      ]
     }
    ],
