--- a/src/poc_company_webpage.ipynb
+++ b/src/poc_company_webpage.ipynb
@@ -64,7 +64,7 @@
     }
    ],
    "source": [
-    "from search import search\n",
+    "from google_search import search\n",
     "\n",
     "results = list(search(\"site:98point6.com about\", num=1))\n",
     "results"
