--- a/src/poc_company_webpage.ipynb
+++ b/src/poc_company_webpage.ipynb
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from core import CompanyProduct, init\n",
+    "from core import Seed, init\n",
     "\n",
     "init()"
    ]
@@ -26,7 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "target = CompanyProduct.same(\"Pomelo Care\")"
+    "target = Seed.init(\"Pomelo Care\")"
    ]
   },
   {
