--- a/src/notebooks/poc/poc_llm_search.ipynb
+++ b/src/notebooks/poc/poc_llm_search.ipynb
@@ -108,7 +108,7 @@
     }
    ],
    "source": [
-    "from google_search import search\n",
+    "from src.utils.google_search import search\n",
     "\n",
     "query_results_pairs = []\n",
     "\n",
