--- a/src/notebooks/poc/poc_optimized_search.ipynb
+++ b/src/notebooks/poc/poc_optimized_search.ipynb
@@ -43,7 +43,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from google_search import search\n",
+    "from src.utils.google_search import search\n",
     "\n",
     "num_results = 80\n",
     "\n",
