--- a/src/notebooks/poc/poc_tune_reddit_search.ipynb
+++ b/src/notebooks/poc/poc_tune_reddit_search.ipynb
@@ -145,7 +145,7 @@
    ],
    "source": [
     "# debug the search\n",
-    "from google_search import search\n",
+    "from src.utils.google_search import search\n",
     "\n",
     "# query = f'site:reddit.com {target.company}'\n",
     "# query = f'site:reddit.com \"{target.company}\" related:{target.domain}'\n",
