--- a/src/notebooks/poc/poc_tune_reddit_search.ipynb
+++ b/src/notebooks/poc/poc_tune_reddit_search.ipynb
@@ -2,29 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 64,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from core import Seed, init\n",
     "\n",
-    "init()\n",
-    "\n",
-    "import sys\n",
-    "from loguru import logger\n",
-    "logger.remove()\n",
-    "logger.add(sys.stderr, level=\"INFO\")"
+    "init()"
    ]
   },
   {
@@ -40,17 +24,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "23    (Kevala, Kevala, kevala.care)\n",
+       "23    (Kevala, Kevala, kevala.care, (staffing, healt...\n",
        "dtype: object"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +58,7 @@
        "'(healthcare OR staffing)'"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +104,7 @@
      "output_type": "stream",
      "text": [
       "# Employee Scheduling Software for Medical Staffing : r/smallbusiness [https://www.reddit.com/r/smallbusiness/comments/15308zx/employee_scheduling_software_for_medical_staffing/]\n",
-      "Jul 18, 2023 ... I'm on the recruiting side of the medical staffing, check out Kevala. ... Related discussions. Best Employee Scheduling App · Best Scheduling ...\n",
+      "Jul 18, 2023 ... I'm on the recruiting side of the medical staffing, check out Kevala. ... Related discussions. Best Scheduling Software · Best Employee ...\n",
       "\n",
       "# hospital bonuses : r/cna [https://www.reddit.com/r/cna/comments/x9fe00/hospital_bonuses/]\n",
       "Sep 8, 2022 ... And as for what type of hospital I guess acute care? Haha I'm ... Last year I worked for kevala, a staffing agency where you can pick ...\n",
@@ -137,6 +121,9 @@
       "# Does the Kerala model work? : r/CapitalismVSocialism [https://www.reddit.com/r/CapitalismVSocialism/comments/eyrn7s/does_the_kerala_model_work/]\n",
       "Feb 4, 2020 ... ... health-care-intl/index.html. For more on economic troubles: https ... The high unemployment (and associated social problems known to be related ...\n",
       "\n",
+      "# Luna the Hardcore and Awesome (u/LunaAnew) - Reddit [https://www.reddit.com/user/LunaAnew/submitted/]\n",
+      "I am a student and am working for two different staffing companies (express and kevala) with occassional shifts through clipboard. I mainly book shifts ...\n",
+      "\n",
       "# Has anyone's personality changed dramatically after opening their ... [https://www.reddit.com/r/yoga/comments/1aqcn4y/has_anyones_personality_changed_dramatically/]\n",
       "Feb 14, 2024 ... The tird eye opens during a process called the Wedding of Shiva and Shakti leading to a temporary state called Kevala Nirvikalpa Samadhi, what ...\n",
       "\n"
@@ -145,7 +132,7 @@
    ],
    "source": [
     "# debug the search\n",
-    "from src.utils.google_search import search\n",
+    "from utils.google_search import search\n",
     "\n",
     "# query = f'site:reddit.com {target.company}'\n",
     "# query = f'site:reddit.com \"{target.company}\" related:{target.domain}'\n",
