--- a/src/notebooks/poc/scrapy_webpage.ipynb
+++ b/src/notebooks/poc/scrapy_webpage.ipynb
@@ -9,17 +9,16 @@
     "import scrapy\n",
     "from scrapy.crawler import CrawlerProcess\n",
     "from typing import Iterable, List, Dict, Union\n",
-    "from dataclasses import dataclass\n",
     "import json\n",
     "import newspaper\n",
     "\n",
     "from urllib.parse import urlparse\n",
-    "from data_sources.news.scrape import remove_img_tags\n",
+    "from data_sources.news.scrape import remove_img_tags, article_to_markdown\n",
     "\n",
     "def response_to_article(\n",
     "    response: scrapy.http.Response,\n",
     ") -> newspaper.Article:\n",
-    "    \"\"\"Parse the response from a URL into a newspaper Article\"\"\"\n",
+    "    \"\"\"Parse the scrapy response into a newspaper Article\"\"\"\n",
     "    article = newspaper.article(\n",
     "        response.url,\n",
     "        language=\"en\",\n",
@@ -29,23 +28,6 @@
     "    )\n",
     "    article.parse()\n",
     "    return article\n",
-    "\n",
-    "\n",
-    "def article_to_markdown(article: newspaper.Article, max_chars=None) -> str:\n",
-    "    \"\"\"Format a parsed newspaper Article into Markdown for summarization\"\"\"\n",
-    "    header = article.title\n",
-    "    if article.authors:\n",
-    "        header += f\" by {', '.join(article.authors)}\"\n",
-    "    if article.publish_date:\n",
-    "        header += f\" on {article.publish_date.strftime('%Y-%m-%d')}\"\n",
-    "\n",
-    "    text = article.text\n",
-    "    if max_chars:\n",
-    "        text = text[:max_chars]\n",
-    "\n",
-    "    header = f\"# [{header}]({article.url})\"\n",
-    "\n",
-    "    return f\"{header}\\n{text}\"\n",
     "\n",
     "\n",
     "class CompanySpider(scrapy.Spider):\n",
@@ -59,8 +41,6 @@
     "        self.start_urls = [f\"http://{domain}\"]\n",
     "\n",
     "    def parse(self, response: scrapy.http.Response) -> Iterable[Union[Dict, scrapy.http.Request]]:\n",
-    "        # TODO: Replace this with extraction code\n",
-    "        # page_content = response.css(\"body\").get()\n",
     "        parsed_article = response_to_article(response)\n",
     "        markdown = article_to_markdown(parsed_article)\n",
     "        yield {\n",
@@ -74,7 +54,6 @@
     "            if href.startswith(\"/\"):\n",
     "                href = response.urljoin(href)\n",
     "            url_parts = urlparse(href)\n",
-    "            # if self.allowed_domains[0] in href:\n",
     "            if url_parts.netloc.endswith(self.allowed_domains[0]):\n",
     "                yield scrapy.Request(href, callback=self.parse)\n",
     "\n"
@@ -86,12 +65,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
-    "def crawl_company_webpage(domain: str):\n",
+    "def crawl_company_webpage(domain: str, depth_limit: int=1):\n",
+    "    filename = f\"../output/data/scrapy/{domain}.json\"\n",
     "    process = CrawlerProcess(settings={\n",
     "        \"FEEDS\": {\n",
-    "            \"output.json\": {\n",
+    "            filename: {\n",
     "                \"format\": \"json\",\n",
     "                \"overwrite\": True,\n",
     "                },\n",
@@ -101,8 +79,7 @@
     "        #     \"User-Agent\": \"Mozilla/5.0 (compatible; CompanyBot/1.0; +http://example.com/bot)\",\n",
     "        #     \"Accept-Language\": \"en\",\n",
     "        # },\n",
-    "        # NOTE: Setting this to 0 will crawl everything\n",
-    "        \"DEPTH_LIMIT\": 1,\n",
+    "        \"DEPTH_LIMIT\": depth_limit,\n",
     "    })\n",
     "\n",
     "    process.crawl(CompanySpider, domain=domain)\n",
@@ -110,8 +87,10 @@
     "    # NOTE: This can only be run once per process, so in a notebook we need to restart the kernel\n",
     "    process.start()\n",
     "\n",
+    "    return filename\n",
     "\n",
-    "webpage_results = crawl_company_webpage(\"synthesize.bio\")"
+    "\n",
+    "json_file = crawl_company_webpage(\"98point6.com\", depth_limit=2)"
    ]
   },
   {
@@ -120,18 +99,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"output.json\", \"r\") as file:\n",
+    "with open(json_file, \"r\") as file:\n",
     "    data = json.load(file)\n",
     "\n",
+    "total_chars = 0\n",
     "for page in sorted(data, key=lambda p: p[\"url\"]):\n",
+    "    truncated_page = page[\"markdown\"][:4000]\n",
     "    print(f\"\"\"\n",
     "# {page[\"url\"]}\n",
     "{len(page[\"markdown\"]):,} chars in markdown\n",
     "\n",
-    "{page[\"markdown\"][:300]}...\n",
+    "{truncated_page}...\n",
     "\"\"\")\n",
+    "    total_chars += len(truncated_page)\n",
     "\n",
-    "total_chars = sum(len(page[\"markdown\"]) for page in data)\n",
     "print(f\"Total chars: {total_chars:,}\")"
    ]
   },
