--- a/src/notebooks/poc/scrapy_webpage.ipynb
+++ b/src/notebooks/poc/scrapy_webpage.ipynb
@@ -90,7 +90,7 @@
     "    return filename\n",
     "\n",
     "\n",
-    "json_file = crawl_company_webpage(\"98point6.com\", depth_limit=2)"
+    "json_file = crawl_company_webpage(\"pomelocare.com\", depth_limit=2)"
    ]
   },
   {
