Added Glassdoor trending and rebuilt

--- a/src/notebooks/poc/numeric_reviews.ipynb
+++ b/src/notebooks/poc/numeric_reviews.ipynb
@@ -166,6 +166,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3.5 , 3.68, 4.  , 4.46])"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "overall_ratings = [result.glassdoor_result.raw_reviews[\"ratings\"][\"overallRating\"] for result in results.values() if result.glassdoor_result]\n",
+    "overall_ratings\n",
+    "\n",
+    "np.quantile(overall_ratings, [0.2, 0.4, 0.6, 0.8])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 42,
    "metadata": {},
    "outputs": [],
