--- a/src/notebooks/poc/poc_scrape.ipynb
+++ b/src/notebooks/poc/poc_scrape.ipynb
@@ -61,9 +61,9 @@
     "\n",
     "    return result\n",
     "\n",
-    "async def test_ascrape(urls, scrape_fn):\n",
+    "async def test_ascrape(urls, scrape_fn, **kwargs):\n",
     "    start = time.time()\n",
-    "    result = await scrape_fn(urls)\n",
+    "    result = await scrape_fn(urls, **kwargs)\n",
     "\n",
     "    duration_sec = time.time() - start\n",
     "    sec_per_url = duration_sec / len(urls)\n",
@@ -103,7 +103,7 @@
     "\n",
     "    return responses\n",
     "\n",
-    "baseline_responses = test_scrape(urls, serial_scrape)\n"
+    "# baseline_responses = test_scrape(urls, serial_scrape)\n"
    ]
   },
   {
@@ -113,9 +113,10 @@
    "outputs": [],
    "source": [
     "from utils.async_scrape import scrape\n",
+    "from core import cache\n",
     "\n",
-    "results = await test_ascrape(urls, scrape)\n",
-    "results"
+    "async_responses = await test_ascrape(urls, scrape, cache=cache)\n",
+    "async_responses"
    ]
   },
   {
@@ -126,7 +127,7 @@
    "source": [
     "from collections import Counter\n",
     "\n",
-    "Counter([response.status for response in results])"
+    "Counter([response.status for response in async_responses])"
    ]
   },
   {
@@ -146,6 +147,27 @@
    "outputs": [],
    "source": [
     "sorted(urls)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from core import cache\n",
+    "\n",
+    "for key in cache.iterkeys():\n",
+    "    print(key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(cache)"
    ]
   },
   {
