--- a/src/notebooks/poc/poc_optimized_reddit_search.ipynb
+++ b/src/notebooks/poc/poc_optimized_reddit_search.ipynb
@@ -23,7 +23,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Seed(company='Rad AI', deprecated_product='Impressions', domain='radai.com', keywords=None, deprecated_require_news_backlinks=False, deprecated_require_reddit_backlinks=False, primary_product=Product(name='Impressions', webpage_url='https://www.radai.com/impressions', steam_url=None, google_play_url=None, apple_app_store_url=None), feature_flags=FeatureFlags(require_news_backlinks=False, require_reddit_backlinks=False))"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from stored_config import Company\n",
+    "\n",
+    "seed = Company.find_first(\"Rad AI\").to_core_company()\n",
+    "seed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -38,8 +61,6 @@
     }
    ],
    "source": [
-    "seed = Seed.init(\"Rad.ai\", \"Omni\", domain=\"rad.ai\")\n",
-    "\n",
     "company_description = \"Rad AI is a rapidly growing AI start-up focused on revolutionizing radiology reporting by utilizing advanced machine learning to enhance efficiency, reduce burnout, and improve patient care in healthcare settings.\"\n",
     "product_description = \"Omni by Rad AI is an intelligent radiology reporting software that automatically generates customized report impressions based on radiologists' findings and preferences, significantly streamlining the reporting process and improving productivity.\"\n",
     "\n",
@@ -473,7 +494,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
