--- a/src/notebooks/poc/poc_scrape.ipynb
+++ b/src/notebooks/poc/poc_scrape.ipynb
@@ -28,12 +28,33 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Seed(company='98point6', deprecated_product='98point6', domain='98point6.com', keywords=None, deprecated_require_news_backlinks=False, deprecated_require_reddit_backlinks=False, primary_product=None, feature_flags=FeatureFlags(require_news_backlinks=False, require_reddit_backlinks=False))"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from stored_config import Company\n",
+    "\n",
+    "target = Company.find_first(\"98point6\").to_core_company()\n",
+    "target"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "target = Seed.init(\"98point6\", domain=\"98point6.com\")\n",
-    "\n",
     "from data_sources.news.search import find_news_articles\n",
     "search_results = find_news_articles(target, num_results=40)\n",
     "urls = [result.link for result in search_results]\n",
@@ -180,7 +201,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "company-detective--CjhIlIZ",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
