--- a/src/notebooks/poc/poc_optimized_search.ipynb
+++ b/src/notebooks/poc/poc_optimized_search.ipynb
@@ -29,12 +29,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Seed(company='Kevala', deprecated_product='Kevala', domain='kevala.care', keywords=frozenset({'staffing', 'healthcare'}), deprecated_require_news_backlinks=False, deprecated_require_reddit_backlinks=False, primary_product=None, feature_flags=FeatureFlags(require_news_backlinks=False, require_reddit_backlinks=False))"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "seed = Seed.init(\"Kevala\", domain=\"kevala.care\")\n",
-    "\n"
+    "from stored_config import Company\n",
+    "\n",
+    "target = Company.find_first(\"Kevala\").to_core_company()\n",
+    "target"
    ]
   },
   {
@@ -176,7 +189,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
