Updating comments and such

--- a/src/notebooks/poc/poc_search_click_logs.ipynb
+++ b/src/notebooks/poc/poc_search_click_logs.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Training an link navigator from HAR files\n",
+    "\n",
+    "This idea was that I could record a web session from Google searches to clicking the homepage to the detail pages and use that to automatically learn how to prioritize outgoing links so that I can build a prioritized crawl."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
