--- a/src/notebooks/poc/schema_org_generation.ipynb
+++ b/src/notebooks/poc/schema_org_generation.ipynb
@@ -9,7 +9,15 @@
     "- Input: Existing scrape data, possibly just the summarized markdown\n",
     "- Output:\n",
     "    - Ideally, figure out the right schema to use with chain of thought\n",
-    "    - Maximally instantiate in Schema.org for the company"
+    "    - Maximally instantiate in Schema.org for the company\n",
+    "\n",
+    "## Status\n",
+    "\n",
+    "This just loads the summary I've already produced and fills in an Organization schema.\n",
+    "\n",
+    "Limitations:\n",
+    "- It doesn't pull info on the nested schemas\n",
+    "- It doesn't generalize to non-Organization"
    ]
   },
   {
@@ -23,133 +31,6 @@
     "\n",
     "with open(\"../output/data/98point6.json\", \"r\") as f:\n",
     "    data = UnifiedResult(**json.load(f))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['__abstractmethods__',\n",
-       " '__annotations__',\n",
-       " '__class__',\n",
-       " '__class_getitem__',\n",
-       " '__class_vars__',\n",
-       " '__copy__',\n",
-       " '__deepcopy__',\n",
-       " '__delattr__',\n",
-       " '__dict__',\n",
-       " '__dir__',\n",
-       " '__doc__',\n",
-       " '__eq__',\n",
-       " '__fields__',\n",
-       " '__fields_set__',\n",
-       " '__format__',\n",
-       " '__ge__',\n",
-       " '__get_pydantic_core_schema__',\n",
-       " '__get_pydantic_json_schema__',\n",
-       " '__getattr__',\n",
-       " '__getattribute__',\n",
-       " '__getstate__',\n",
-       " '__gt__',\n",
-       " '__hash__',\n",
-       " '__init__',\n",
-       " '__init_subclass__',\n",
-       " '__iter__',\n",
-       " '__le__',\n",
-       " '__lt__',\n",
-       " '__module__',\n",
-       " '__ne__',\n",
-       " '__new__',\n",
-       " '__pretty__',\n",
-       " '__private_attributes__',\n",
-       " '__pydantic_complete__',\n",
-       " '__pydantic_core_schema__',\n",
-       " '__pydantic_custom_init__',\n",
-       " '__pydantic_decorators__',\n",
-       " '__pydantic_extra__',\n",
-       " '__pydantic_fields_set__',\n",
-       " '__pydantic_generic_metadata__',\n",
-       " '__pydantic_init_subclass__',\n",
-       " '__pydantic_parent_namespace__',\n",
-       " '__pydantic_post_init__',\n",
-       " '__pydantic_private__',\n",
-       " '__pydantic_root_model__',\n",
-       " '__pydantic_serializer__',\n",
-       " '__pydantic_validator__',\n",
-       " '__reduce__',\n",
-       " '__reduce_ex__',\n",
-       " '__repr__',\n",
-       " '__repr_args__',\n",
-       " '__repr_name__',\n",
-       " '__repr_str__',\n",
-       " '__rich_repr__',\n",
-       " '__setattr__',\n",
-       " '__setstate__',\n",
-       " '__signature__',\n",
-       " '__sizeof__',\n",
-       " '__slots__',\n",
-       " '__str__',\n",
-       " '__subclasshook__',\n",
-       " '__weakref__',\n",
-       " '_abc_impl',\n",
-       " '_calculate_keys',\n",
-       " '_check_frozen',\n",
-       " '_copy_and_set_values',\n",
-       " '_get_value',\n",
-       " '_iter',\n",
-       " 'construct',\n",
-       " 'copy',\n",
-       " 'crunchbase_markdown',\n",
-       " 'customer_experience_markdown',\n",
-       " 'customer_experience_result',\n",
-       " 'dict',\n",
-       " 'from_orm',\n",
-       " 'general_search_markdown',\n",
-       " 'glassdoor_markdown',\n",
-       " 'glassdoor_result',\n",
-       " 'json',\n",
-       " 'lineage',\n",
-       " 'model_computed_fields',\n",
-       " 'model_config',\n",
-       " 'model_construct',\n",
-       " 'model_copy',\n",
-       " 'model_dump',\n",
-       " 'model_dump_json',\n",
-       " 'model_extra',\n",
-       " 'model_fields',\n",
-       " 'model_fields_set',\n",
-       " 'model_json_schema',\n",
-       " 'model_parametrized_name',\n",
-       " 'model_post_init',\n",
-       " 'model_rebuild',\n",
-       " 'model_validate',\n",
-       " 'model_validate_json',\n",
-       " 'model_validate_strings',\n",
-       " 'news_result',\n",
-       " 'parse_file',\n",
-       " 'parse_obj',\n",
-       " 'parse_raw',\n",
-       " 'schema',\n",
-       " 'schema_json',\n",
-       " 'summary_markdown',\n",
-       " 'target',\n",
-       " 'to_html_file',\n",
-       " 'update_forward_refs',\n",
-       " 'validate',\n",
-       " 'webpage_result']"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dir(data)"
    ]
   },
   {
@@ -330,66 +211,6 @@
     "\n",
     "print(result.content)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Specification base set to https://www.schema.org\n",
-      "Using Version 12.0\n",
-      "Found https://www.schema.org/Organization\n",
-      "Organization: found 76 properties\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'https://schema.org/actionableFeedbackPolicy, https://schema.org/additionalType, https://schema.org/address, https://schema.org/aggregateRating, https://schema.org/alternateName, https://schema.org/alumni, https://schema.org/areaServed, https://schema.org/award, https://schema.org/awards, https://schema.org/brand, https://schema.org/contactPoint, https://schema.org/contactPoints, https://schema.org/correctionsPolicy, https://schema.org/department, https://schema.org/description, https://schema.org/disambiguatingDescription, https://schema.org/dissolutionDate, https://schema.org/diversityPolicy, https://schema.org/diversityStaffingReport, https://schema.org/duns, https://schema.org/email, https://schema.org/employee, https://schema.org/employees, https://schema.org/ethicsPolicy, https://schema.org/event, https://schema.org/events, https://schema.org/faxNumber, https://schema.org/founder, https://schema.org/founders, https://schema.org/foundingDate, https://schema.org/foundingLocation, https://schema.org/funder, https://schema.org/globalLocationNumber, https://schema.org/hasCredential, https://schema.org/hasMerchantReturnPolicy, https://schema.org/hasOfferCatalog, https://schema.org/hasPOS, https://schema.org/hasProductReturnPolicy, https://schema.org/identifier, https://schema.org/image, https://schema.org/interactionStatistic, https://schema.org/isicV4, https://schema.org/knowsAbout, https://schema.org/knowsLanguage, https://schema.org/legalName, https://schema.org/leiCode, https://schema.org/location, https://schema.org/logo, https://schema.org/mainEntityOfPage, https://schema.org/makesOffer, https://schema.org/member, https://schema.org/memberOf, https://schema.org/members, https://schema.org/naics, https://schema.org/name, https://schema.org/nonprofitStatus, https://schema.org/numberOfEmployees, https://schema.org/ownershipFundingInfo, https://schema.org/owns, https://schema.org/parentOrganization, https://schema.org/potentialAction, https://schema.org/publishingPrinciples, https://schema.org/review, https://schema.org/reviews, https://schema.org/sameAs, https://schema.org/seeks, https://schema.org/serviceArea, https://schema.org/slogan, https://schema.org/sponsor, https://schema.org/subOrganization, https://schema.org/subjectOf, https://schema.org/taxID, https://schema.org/telephone, https://schema.org/unnamedSourcesPolicy, https://schema.org/url, https://schema.org/vatID'"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'https://schema.org/actionableFeedbackPolicy, https://schema.org/additionalType, https://schema.org/address, https://schema.org/aggregateRating, https://schema.org/alternateName, https://schema.org/alumni, https://schema.org/areaServed, https://schema.org/award, https://schema.org/awards, https://schema.org/brand, https://schema.org/contactPoint, https://schema.org/contactPoints, https://schema.org/correctionsPolicy, https://schema.org/department, https://schema.org/description, https://schema.org/disambiguatingDescription, https://schema.org/dissolutionDate, https://schema.org/diversityPolicy, https://schema.org/diversityStaffingReport, https://schema.org/duns, https://schema.org/email, https://schema.org/employee, https://schema.org/employees, https://schema.org/ethicsPolicy, https://schema.org/event, https://schema.org/events, https://schema.org/faxNumber, https://schema.org/founder, https://schema.org/founders, https://schema.org/foundingDate, https://schema.org/foundingLocation, https://schema.org/funder, https://schema.org/globalLocationNumber, https://schema.org/hasCredential, https://schema.org/hasMerchantReturnPolicy, https://schema.org/hasOfferCatalog, https://schema.org/hasPOS, https://schema.org/hasProductReturnPolicy, https://schema.org/identifier, https://schema.org/image, https://schema.org/interactionStatistic, https://schema.org/isicV4, https://schema.org/knowsAbout, https://schema.org/knowsLanguage, https://schema.org/legalName, https://schema.org/leiCode, https://schema.org/location, https://schema.org/logo, https://schema.org/mainEntityOfPage, https://schema.org/makesOffer, https://schema.org/member, https://schema.org/memberOf, https://schema.org/members, https://schema.org/naics, https://schema.org/name, https://schema.org/nonprofitStatus, https://schema.org/numberOfEmployees, https://schema.org/ownershipFundingInfo, https://schema.org/owns, https://schema.org/parentOrganization, https://schema.org/potentialAction, https://schema.org/publishingPrinciples, https://schema.org/review, https://schema.org/reviews, https://schema.org/sameAs, https://schema.org/seeks, https://schema.org/serviceArea, https://schema.org/slogan, https://schema.org/sponsor, https://schema.org/subOrganization, https://schema.org/subjectOf, https://schema.org/taxID, https://schema.org/telephone, https://schema.org/unnamedSourcesPolicy, https://schema.org/url, https://schema.org/vatID'"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
