--- a/src/notebooks/poc/sitemap.ipynb
+++ b/src/notebooks/poc/sitemap.ipynb
@@ -1,6 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Explorations of sitemaps\n",
+    "\n",
+    "## Status\n",
+    "\n",
+    "- The `usp` library gets a pretty exhaustive sitemap\n",
+    "- Some sites just don't have sitemaps so I went with something more reliable (crawling from the top)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
